--- a/01.html
+++ b/01.html
@@ -391,6 +391,7 @@
             <div class="result-message" id="resultMessage"></div>
             <div class="pass-requirements">※ 提示：错误少于5题（答对6题以上）为通过</div>
             <button class="reset-btn" id="retryBtn" style="margin-top: 20px;">重新测试</button>
+            <a href="02.html" class="next-page-btn">下一页</a>
         </div>
     </div>
 
@@ -647,4 +648,5 @@
         document.addEventListener('DOMContentLoaded', initializePage);
     </script>
 </body>
+
 </html>
