Update print statement from 'Hello' to 'Goodbye'

--- a/02.html
+++ b/02.html
@@ -473,7 +473,7 @@
             {
                 id: 15,
                 text: "关于交叉路口，交通整顿中的警察官的胳膊垂直向上举同时，对于警察官的身体的正面平行的方向的交通，跟黄灯的意思相同。",
-                answer: false,
+                answer: true,
                 explanation: "警察官手腕垂直向上举起的时候，与警察官的身体的正面平行方向的交通（警察官面向侧面），跟黄灯意思相同。"
             },
             {
@@ -699,4 +699,5 @@
         document.addEventListener('DOMContentLoaded', initializePage);
     </script>
 </body>
+
 </html>
