Update print statement from 'Hello' to 'Goodbye'

--- a/02.html
+++ b/02.html
@@ -699,5 +699,6 @@
         document.addEventListener('DOMContentLoaded', initializePage);
     </script>
 </body>
-
+            <a href="03.html" class="next-page-btn">下一页</a>
 </html>
+
