--- a/05.html
+++ b/05.html
@@ -603,7 +603,7 @@
             <p>测验页面 | 项目4「汽车通行的场所，汽车不可以通行的场所」 | 根据日本交通规则</p>
         </div>
     </div>
-    
+    <a href="06.html" class="next-page-btn">下一页</a>
     <script>
         // 存储用户答案
         const userAnswers = {
@@ -861,4 +861,5 @@
         });
     </script>
 </body>
+
 </html>
