Update print statement from 'Hello' to 'Goodbye'

--- a/06.html
+++ b/06.html
@@ -543,7 +543,7 @@
             <p>测验页面 | 项目4「汽车通行的场所，汽车不可以通行的场所」（第二部分） | 根据日本交通规则</p>
         </div>
     </div>
-    
+    <a href="07.html" class="next-page-btn">下一页</a>
     <script>
         // 存储用户答案
         const userAnswers = {
@@ -792,4 +792,5 @@
         });
     </script>
 </body>
+
 </html>
