Update print statement from 'Hello' to 'Goodbye'

--- a/07.html
+++ b/07.html
@@ -596,7 +596,7 @@
             <p>测验页面 | 项目5「紧急自动车等优先」 | 根据日本交通规则</p>
         </div>
     </div>
-    
+    <a href="08.html" class="next-page-btn">下一页</a>
     <script>
         // 存储用户答案
         const userAnswers = {
@@ -852,4 +852,5 @@
         });
     </script>
 </body>
+
 </html>
