Update print statement from 'Hello' to 'Goodbye'

--- a/09.html
+++ b/09.html
@@ -603,7 +603,7 @@
             <p>测验页面 | 项目6「十字路口等的通行，火车道」 | 根据日本交通规则</p>
         </div>
     </div>
-    
+    <a href="10.html" class="next-page-btn">下一页</a>
     <script>
         // 存储用户答案
         const userAnswers = {
@@ -859,4 +859,5 @@
         });
     </script>
 </body>
+
 </html>
