Update print statement from 'Hello' to 'Goodbye'

--- a/12.html
+++ b/12.html
@@ -438,7 +438,7 @@
             <p>根据第27页官方答案整理 | 即时反馈测试</p>
         </div>
     </div>
-    
+    <a href="13.html" class="next-page-btn">下一页</a>
     <script>
         // 测试数据 - 刹车与慢行安全
         const testData = [
@@ -711,4 +711,5 @@
         document.addEventListener('DOMContentLoaded', initTest);
     </script>
 </body>
+
 </html>
