Update print statement from 'Hello' to 'Goodbye'

--- a/08.html
+++ b/08.html
@@ -503,7 +503,7 @@
             <p>测验页面 | 项目5「紧急自动车等优先」（第二部分） | 根据日本交通规则</p>
         </div>
     </div>
-    
+    <a href="09.html" class="next-page-btn">下一页</a>
     <script>
         // 存储用户答案
         const userAnswers = {
@@ -744,4 +744,5 @@
         });
     </script>
 </body>
+
 </html>
